Feat: this문법 정리 추가
tistory 주소로 첨부했습니다.

--- a/윤현서/assignment/week1/섹션0.md
+++ b/윤현서/assignment/week1/섹션0.md
@@ -37,3 +37,6 @@
 [11. ref]
 - DOM에 접근하고 싶을 땐 ref를 붙여서 접근할 수 있음.
 - setState -> 매번 render를 실행함.
+
+++this 문법 정리
+ https://hyeonseo3104.tistory.com/8
